--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 langchain = "^0.0.162"
 pandas = "^2.0.1"
 tabulate = "^0.9.0"
+openai = "^0.27.6"
+datetime = "^5.1"
 
 
 [build-system]
