--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ tabulate = "^0.9.0"
 openai = "^0.27.6"
 datetime = "^5.1"
 wolframalpha = "^5.0.0"
-extract-msg = "^0.41.2"
+typer = "^0.9.0"
+extract-msg = "^0.41.5"
 openpyxl = "^3.1.2"
-
 
 [build-system]
 requires = ["poetry-core"]
