--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ wolframalpha = "^5.0.0"
 typer = "^0.9.0"
 extract-msg = "^0.41.5"
 openpyxl = "^3.1.2"
+seaborn = "^0.12.2"
+plotly = "^5.15.0"
 
 [build-system]
 requires = ["poetry-core"]
