--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ extract-msg = "^0.41.5"
 openpyxl = "^3.1.2"
 seaborn = "^0.12.2"
 plotly = "^5.15.0"
+pytelegrambotapi = "^4.12.0"
+pymongo = "^4.4.0"
 
 [build-system]
 requires = ["poetry-core"]
