--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ pytelegrambotapi = "^4.12.0"
 pymongo = "^4.4.0"
 aiogram = "^2.25.1"
 tiktoken = "^0.4.0"
+aiosqlite = "^0.19.0"
+aiofiles = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core"]
