--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "mm-analyzer"
+name = "analyzer"
 version = "0.1.0"
 description = ""
 authors = ["ennucore <ennucore@gmail.com>"]
 readme = "README.md"
-packages = [{include = "mm_analyzer"}]
+packages = [{include = "analyzer"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -25,6 +25,7 @@ aiogram = "^2.25.1"
 tiktoken = "^0.4.0"
 aiosqlite = "^0.19.0"
 aiofiles = "^23.1.0"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
